[package]
name = "mini-raft-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
parking_lot = "0.12"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
bytes = "1.5"
crc32fast = "1.3"
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"
tempfile = "3.8"

[[bench]]
name = "bench"
harness = false
